# SDL_BasicGameEngine

./: CMakeLists.txt  README.md
SDL_BasicGameEngine/: CMakeLists.txt  error.cpp  error.h  game.cpp  game.h  game.hpp  main.cpp  object.h
SDL_BasicGameEngine.xcodeproj/: project.pbxproj
SDL_BasicGameEngine.xcodeproj/xcuserdata/muzyka.xcuserdatad/xcschemes/: xcschememanagement.plist
